# yolo_comparator

./: CMakeLists.txt  README.md  build_node  run_node_bridge  stop_node_bridge
include/: annotations_publishing.hpp  detection_types.hpp  yolo26_post_processing.hpp  yolo_comparator_node.hpp  yolo_inference.hpp  yolov5_post_processing.hpp
install/: local_setup.sh  setup.sh
install/yolo_comparator/share/ament_index/resource_index/package_run_dependencies/: yolo_comparator
install/yolo_comparator/share/ament_index/resource_index/parent_prefix_path/: yolo_comparator
install/yolo_comparator/share/yolo_comparator/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yolo_comparator/share/yolo_comparator/cmake/: yolo_comparatorConfig.cmake
src/: annotations_publishing.cpp  yolo26_post_processing.cpp  yolo_comparator_node.cpp  yolo_inference.cpp  yolov5_post_processing.cpp
